--- a/src/main/resources/templates/CalcTemplate/StressCalc.html
+++ b/src/main/resources/templates/CalcTemplate/StressCalc.html
@@ -27,19 +27,18 @@
         <tr>
             <td>
                 Select Spec:
-                <select id="specTest" th:field="*{spec}" onchange="getGrade()">
+                <select id="specASME" th:field="*{spec}" onchange="getGrade('ASME','getASMEGrade')">
                     <option value=""> -- </option>
-                    <option th:each="key : ${mapList.getVal().keySet()}"
+                    <option th:each="key : ${mapList.getVal()}"
                             th:value="${key}"
                             th:utext="${key}">
                     </option>
                 </select>
 
-                <select id="gradeTest" th:field="*{grade}">
+                <select id="gradeASME" th:field="*{grade}">
                     <option value=""> -- </option>
                 </select>
-
-                <input name="amount" type="number" step="any" th:field="*{temp}">
+                <input id="desTempGOST" name="amount" type="number" step="any">
                 <button type="button" onclick="getGOSTTension()">LUL</button>
             </td>
         </tr>
@@ -57,34 +56,31 @@
 <br>
 <br>
 <br>
-<form action="#" th:action="@{/test1}"  th:object="${specForm}" method='POST'>
+
+<form action="#" th:object="${specForm}" method='POST' >
     <table>
+        <tbody>
         <tr>
-            <td>Select Spec:</td>
             <td>
-                <select  th:field="*{spec}" >
+                Select Spec:
+                <select id="specGOST" th:field="*{spec}" onchange="getGrade('GOST','getGOSTGrade')">
                     <option value=""> -- </option>
-                    <option th:each="key : ${simgaRD.getGrMap().entrySet()}"
+                    <option th:each="key : ${simgaRD.getVal()}"
                             th:value="${key}"
-                            th:utext="${key.getKey()}">
-                    </option>
-                </select>
-                <select >
-                    <option value=""> -- </option>
-                    <option th:each="key : ${simgaRD}"
-                            th:value="${simgaRD}"
                             th:utext="${key}">
                     </option>
                 </select>
 
-                <input name="amount" type="number" step="any" th:field="*{temp}">
-                <button type="submit">LUL get this POS</button>
+                <select id="gradeGOST" th:field="*{grade}">
+                    <option value=""> -- </option>
+                </select>
+
             </td>
         </tr>
+
+        </tbody>
     </table>
 </form>
-
-
 
 <form action="#" method='POST'>
     <table border="1">
