--- a/src/main/resources/templates/CalcTemplate/StressCalc.html
+++ b/src/main/resources/templates/CalcTemplate/StressCalc.html
@@ -45,7 +45,7 @@
         <tr>
             <td>
             <div id="gostTension" class="PastorLul">
-                Безделье, это игрушка дьявола, я повторяюсь ежжи
+
             </div>
             </td>
         </tr>
@@ -157,17 +157,17 @@
 
         <tr>
 
-            <td colspan="2"> <button type="button" onclick="testPipe()">LUL</button></td>
+            <td colspan="2"> <button type="button" onclick="testPipe()">Расчет</button></td>
 
         </tr>
 
         <tr>
             <td colspan="2">
                 <div id="resultPressPipe" class="PastorLul">
-                    Безделье
+
                 </div>
                 <div id="resultThickPipe" class="PastorLul">
-                    это игрушка дьявола
+
                 </div>
             </td>
         </tr>
@@ -281,17 +281,17 @@
 
         <tr>
 
-            <td colspan="2"> <button type="button" onclick="testElbow()">LUL</button></td>
+            <td colspan="2"> <button type="button" onclick="testElbow()">Расчет</button></td>
 
         </tr>
 
         <tr>
             <td colspan="2">
                 <div id="resultPressElbow" class="PastorLul">
-                    Безделье
+
                 </div>
                 <div id="resultThickElbow" class="PastorLul">
-                    это игрушка дьявола
+
                 </div>
             </td>
         </tr>
@@ -430,17 +430,17 @@
 
         <tr>
 
-            <td colspan="2"> <button type="button" onclick="testRed()">LUL</button></td>
+            <td colspan="2"> <button type="button" onclick="testRed()">Расчет</button></td>
 
         </tr>
 
         <tr>
             <td colspan="2">
                 <div id="resultPressRedm" class="PastorLul">
-                    Безделье
+
                 </div>
                 <div id="resultThickRedm" class="PastorLul">
-                    это игрушка дьявола
+
                 </div>
             </td>
         </tr>
@@ -448,10 +448,10 @@
         <tr>
             <td colspan="2">
                 <div id="resultPressRed" class="PastorLul">
-                    Безделье
+
                 </div>
                 <div id="resultThickRed" class="PastorLul">
-                    это игрушка дьявола
+
                 </div>
             </td>
         </tr>
@@ -563,17 +563,17 @@
 
         <tr>
 
-            <td colspan="2"> <button type="button" onclick="testTee()">LUL</button></td>
+            <td colspan="2"> <button type="button" onclick="testTee()">Расчет</button></td>
 
         </tr>
 
         <tr>
             <td colspan="2">
                 <div id="resultPressTeem" class="PastorLul">
-                    Безделье
+
                 </div>
                 <div id="resultThickTeem" class="PastorLul">
-                    это игрушка дьявола
+
                 </div>
             </td>
         </tr>
@@ -581,10 +581,10 @@
         <tr>
             <td colspan="2">
                 <div id="resultPressTee" class="PastorLul">
-                    Безделье
+
                 </div>
                 <div id="resultThickTee" class="PastorLul">
-                    это игрушка дьявола но для ответвления
+
                 </div>
             </td>
         </tr>
@@ -601,7 +601,7 @@ PastorLul
 
 <div id="TPTC"></div>
 <script src="/generated/app-bundle.js"></script>
-<button type="button" onclick="testTPTC()">LUL</button>
+<button type="button" onclick="testTPTC()">Расчет</button>
 <div id="TPTCresult"></div>
 
 
